--- a/proformance.css
+++ b/proformance.css
@@ -5,6 +5,7 @@
 }
 .men{
     margin-bottom: 1rem;
+    font-size: 20px;
 }
 .work-intro{
     font-size: 1.2rem;
@@ -27,10 +28,12 @@
     max-width: 1000px;
     background-color: aliceblue;
     margin-bottom: 1rem;
+    margin-top: 50px;
 }
 .work-meta p{
     margin-bottom: .5rem;
 }
 .work-back{
    text-align: center;
+   
 }
