--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 body{
     font-family: 'Kanit',sans-serif;
-    background: rgb(255, 192, 44);
+    background: rgb(255, 111, 190);
     color: rgb(0, 0, 0);
 
 }
@@ -99,6 +99,7 @@ ul{
     border-radius: 8px;
     box-shadow: 0 2px 10px rgb(42, 103, 216);
     transition: tranform 0.3s ease;
+    text-align: center;
 }
 .Project-card :hover{
     transform: translateY(-5px);
